# ev

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: evk.h  evk.rc  evk_charset.c  evk_dialog.c  evk_hook.c  evk_input.c  evk_macro.c  evk_main.c  evk_settings.c  evk_table.h  evk_tray.c  evk_util.c
